# clang-project

./: LICENSE  README.md  index.md  prepaare.md
c-index-test/: CMakeLists.txt  c-index-test.c
clangd-indexer/: CMakeLists.txt  IndexerMain.cpp
docs/: A_standalone_libclang_clangd_application  how_to_install_clang.md
src/indexer/: Makefile  index.cpp
src/indexer/demo/: test.c
src/indexer/demo/include/: test.h
